docs: Update README with improved intro and security details
Refine project description, expand on security guarantees, update
install instructions, and clarify performance notes.